<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.ifpe.ifpetempo.activities.LoginActivity"
    android:id="@+id/main_login"
    >



    <TextView
        android:id="@+id/texto_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/texto_login"
        android:textColor="#006400"
        android:textSize="24sp" />


    <LinearLayout
        android:id="@+id/bloco_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        >

        <EditText
            android:id="@+id/campo_login"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_login"
            android:maxLines="1"
            android:layout_marginTop="30dp"
            android:textColor="#006400"
            />

        <EditText
            android:id="@+id/campo_senha"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campo_senha"
            android:maxLines="1"
            android:layout_marginTop="30dp"
            android:textColor="#006400"
            />

        <Button
            android:id="@+id/bt_entrar"
            android:onClick="validar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/bt_entrar"
            android:textStyle="bold"
            android:background="#21a957"
            android:textColor="#ffffff"
            />

        <TextView
            android:id="@+id/texto_novocadastro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/texto_novocadastro"
            android:textColor="#006400"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>