<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textStyle="bold"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/loginYourLocationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp"
            android:text="@string/loading_location"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="80dp" />


        <ImageView
            android:id="@+id/loginLoadingIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:src="@drawable/loading_indicator_2"
            android:layout_gravity="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />


        <Button
            android:id="@+id/loginLetsGoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lets_go"
            android:background="#21a957" />


        <ImageView
            android:id="@+id/loginCurrentWeatherImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:layout_alignParentBottom="true" />


        <EditText
            android:id="@+id/loginUsernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_insert_your_name" />

    </LinearLayout>

</RelativeLayout>